一些配置的修改

--- a/packages/hoppscotch-sh-admin/tsconfig.json
+++ b/packages/hoppscotch-sh-admin/tsconfig.json
@@ -20,7 +20,9 @@
       "@helpers/*": ["./src/helpers/*"],
       "@modules/*": ["./src/modules/*"],
       "@workers/*": ["./src/workers/*"],
-      "@functional/*": ["./src/helpers/functional/*"]
+      "@functional/*": ["./src/helpers/functional/*"],
+      "@hoppscotch/common": ["../hoppscotch-common/src/index.ts"],
+      "@hoppscotch/common/*": ["../hoppscotch-common/src/*"],
     },
     "types": [
       "vite/client",
