--- a/packages/hoppscotch-sh-admin/package.json
+++ b/packages/hoppscotch-sh-admin/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/material-symbols-rounded": "5.0.5",
     "@fontsource-variable/roboto-mono": "5.0.6",
     "@graphql-typed-document-node/core": "3.1.1",
+    "@hoppscotch/common": "workspace:^",
     "@hoppscotch/ui": "0.1.3",
     "@hoppscotch/vue-toasted": "0.1.0",
     "@intlify/unplugin-vue-i18n": "1.2.0",
