web和admin的注册登录，改成用户密码模式，web邮箱验证模式不变

--- a/packages/hoppscotch-common/package.json
+++ b/packages/hoppscotch-common/package.json
@@ -47,6 +47,7 @@
     "axios": "1.6.2",
     "buffer": "6.0.3",
     "cookie-es": "1.0.0",
+    "crypto-js": "4.2.0",
     "dioc": "1.0.1",
     "esprima": "4.0.1",
     "events": "3.3.0",
