--- a/packages/hoppscotch-selfhost-web/package.json
+++ b/packages/hoppscotch-selfhost-web/package.json
@@ -29,6 +29,7 @@
     "@import-meta-env/unplugin": "0.4.10",
     "axios": "1.6.2",
     "buffer": "6.0.3",
+    "crypto-js": "4.2.0",
     "fp-ts": "2.16.1",
     "process": "0.11.10",
     "rxjs": "7.8.1",
@@ -49,6 +50,7 @@
     "@graphql-typed-document-node/core": "3.2.0",
     "@intlify/vite-plugin-vue-i18n": "7.0.0",
     "@rushstack/eslint-patch": "1.6.0",
+    "@types/crypto-js": "4.2.2",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "@vitejs/plugin-legacy": "4.1.1",
